fix some bbpress titles I put in to see what files they were.  Fix some css issues with the text editor line wrap

--- a/css/editor.css
+++ b/css/editor.css
@@ -258,7 +258,7 @@ textarea {
   height: 100%;
   border: 0;
   resize: none;
-  white-space: pre;
+  /*white-space: pre;*/
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   padding: 10px;
